--- a/package.json
+++ b/package.json
@@ -13,19 +13,31 @@
     "type": "git",
     "url": "https://github.com/wilmoore/parameters-named.js"
   },
-  "keywords": [],
+  "keywords": [
+    "assign",
+    "attributes",
+    "defaults",
+    "extend",
+    "named",
+    "named-parameters",
+    "object",
+    "params",
+    "parameters",
+    "properties"
+  ],
   "author": "Wil Moore III <wil.moore@wilmoore.com>",
   "license": "MIT",
   "devDependencies": {
     "istanbul": "^0.3.13",
     "nodemon": "^1.3.7",
-    "standard": "^3.3.0",
+    "standard": "^3.7.1",
     "tap-spec": "^3.0.0",
-    "tape": "^3.5.0",
+    "tape": "^4.0.0",
     "tape-catch": "^1.0.4",
-    "validator": "^3.38.0"
+    "validator": "^3.39.0"
   },
   "dependencies": {
-    "env-accessors": "^0.2.1"
+    "env-accessors": "^0.2.1",
+    "object-concat": "^0.2.2"
   }
 }
