--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "parameters-named",
-  "version": "0.3.0",
   "description": "Named parameters supporting default value, validation, and environment variables.",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon -x 'npm run test' -e 'js json'",
-    "standard": "standard",
-    "test": "npm run standard && node test.js | tap-spec",
-    "cover": "istanbul cover test.js"
+  "version": "0.3.0",
+  "author": "Wil Moore III <wil.moore@wilmoore.com>",
+  "bugs": {
+    "url": "https://github.com/wilmoore/parameters-named.js/issues"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wilmoore/parameters-named.js"
+  "dependencies": {
+    "env-accessors": "^0.2.1",
+    "object-concat": "^0.2.2"
   },
+  "devDependencies": {
+    "istanbul": "^0.3.13",
+    "nodemon": "^1.3.7",
+    "standard": "^3.7.1",
+    "tap-spec": "^2.2.2",
+    "tape": "^4.0.0",
+    "tape-catch": "^1.0.4",
+    "validator": "^3.39.0"
+  },
+  "homepage": "https://github.com/wilmoore/parameters-named.js",
   "keywords": [
     "assign",
     "attributes",
@@ -21,23 +28,20 @@
     "named",
     "named-parameters",
     "object",
-    "params",
     "parameters",
+    "params",
     "properties"
   ],
-  "author": "Wil Moore III <wil.moore@wilmoore.com>",
   "license": "MIT",
-  "devDependencies": {
-    "istanbul": "^0.3.13",
-    "nodemon": "^1.3.7",
-    "standard": "^3.7.1",
-    "tap-spec": "^3.0.0",
-    "tape": "^4.0.0",
-    "tape-catch": "^1.0.4",
-    "validator": "^3.39.0"
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wilmoore/parameters-named.js"
   },
-  "dependencies": {
-    "env-accessors": "^0.2.1",
-    "object-concat": "^0.2.2"
+  "scripts": {
+    "cover": "istanbul cover test.js",
+    "dev": "nodemon -x 'npm run test --silent' -e 'js json'",
+    "standard": "standard",
+    "test": "npm run standard --silent && node test.js | tap-spec"
   }
 }
